--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 VM/
+/Cvicenia/01_SpringDemo/target/
+/Cvicenia/01/SpringDemo1/target/
+/Cvicenia/01/01_SpringDemo/target/
+/Cvicenia/01/01_SpringDemo (copy)/target/
+/Cvicenia/01/02_SpringDemo_SetterBasedDI/target/
+/Cvicenia/01/01_SpringDemo_ConstructorBasedDI/target/
+/Cvicenia/01/02_SpringDemo_SetterBasedDI (copy)/target/
+/Cvicenia/01/02_SpringDemo_Autowiring/target/
+/Cvicenia/01/03_SpringDemo_Autowiring/target/
