--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ VM/
 /Cvicenia/01/02_SpringDemo_SetterBasedDI (copy)/target/
 /Cvicenia/01/02_SpringDemo_Autowiring/target/
 /Cvicenia/01/03_SpringDemo_Autowiring/target/
+/Cvicenia/01/01_02_DI/target/
+/Cvicenia/01/03_Autowiring/target/
+/Cvicenia/01/04_AnnotationBased/target/
