--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ VM/
 /Cvicenia/01/01_02_DI/target/
 /Cvicenia/01/03_Autowiring/target/
 /Cvicenia/01/04_AnnotationBased/target/
+/Cvicenia/01/05_JavaBasedContainer/target/
