--- a/Cvicenia/01/05_JavaBasedContainer/pom.xml
+++ b/Cvicenia/01/05_JavaBasedContainer/pom.xml
@@ -10,4 +10,11 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.30.RELEASE</version>
+        </dependency>
+    </dependencies>
 </project>
