--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ VM/
 /01_Prednasky/03/05_AOP/target/
 /01_Prednasky/03/06_AOP2/target/
 /01_Prednasky/03/07_AOP3/target/
+/02_Cvicenia/03/01_messageConsumer/target/
+/02_Cvicenia/03/02_logging/target/
+/02_Cvicenia/03/03_getMessageCounter/target/
