readme update and stuff

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,7 @@ VM/
 /03_Playground/SkupinaA_yolo/uloha1/target/
 /03_Playground/SkupinaB_yolo/uloha1/target/
 /03_Playground/uloha1/target/
+/03_Playground/prednasky/SpringDemo1/target/
+/03_Playground/prednasky/SpringDemo1_AnnotConfig/target/
+/03_Playground/prednasky/SpringDemo1_ComponentScan/target/
+/03_Playground/prednasky/SpringDemo1_JavaBased/target/
