--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ VM/
 /03_Playground/prednasky/SpringDemo1_AnnotConfig/target/
 /03_Playground/prednasky/SpringDemo1_ComponentScan/target/
 /03_Playground/prednasky/SpringDemo1_JavaBased/target/
+/03_Playground/prednasky/AOP/target/
+/03_Playground/cvika/SpringDemo1/target/
+/03_Playground/cvika/cv8u2/target/
