--- a/03_Playground/cvika/SpringDemo1/pom.xml
+++ b/03_Playground/cvika/SpringDemo1/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>asos</groupId>
-    <artifactId>05_WebService</artifactId>
+    <artifactId>SpringDemo1</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
@@ -34,5 +34,4 @@
             <version>1.8.9</version>
         </dependency>
     </dependencies>
-    <name>05_WebService</name>
 </project>
