--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ VM/
 /03_Playground/prednasky/AOP/target/
 /03_Playground/cvika/SpringDemo1/target/
 /03_Playground/cvika/cv8u2/target/
+/03_Playground/cvika/recap/target/
