--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@ VM/
 /03_Playground/cvika/SpringDemo1/target/
 /03_Playground/cvika/cv8u2/target/
 /03_Playground/cvika/recap/target/
+/03_Playground/virtualka_test/target/
+/01_Prednasky/03/projekty z prednasky/p31/target/
+/01_Prednasky/03/projekty z prednasky/p32/target/
