--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ VM/
 /03_Playground/virtualka_test/target/
 /01_Prednasky/03/projekty z prednasky/p31/target/
 /01_Prednasky/03/projekty z prednasky/p32/target/
+/zapocet/z1spring/target/
