--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,10 @@ SoapUI-5.4.0/*
 /01_Prednasky/P06-26_10/02_ContractFirstServer/target/
 /01_Prednasky/P06-26_10/02_ContractFirstServerTest/target/
 /01_Prednasky/P06-26_10/mavenproject1/target/
+/01_Prednasky/P06-26_10/02_ContractFirstClient/target/
+/01_Prednasky/P07-02_11/02_ContractFirstClient/target/
+/01_Prednasky/P07-02_11/01_ContractFirstClient-kP6/target/
+/01_Prednasky/P07-02_11/01_ContractFirstClient_P6/target/
+/01_Prednasky/P06-26_10/01_ContractFirstClient_P6/target/
+/01_Prednasky/P07-02_11/02_ContractFirstServer_pt2/target/
+/01_Prednasky/P07-02_11/01_ContractFirstClient_pt2/target/
