--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,12 @@ SoapUI-5.4.0/*
 /01_Prednasky/P06-26_10/01_ContractFirstClient_P6/target/
 /01_Prednasky/P07-02_11/02_ContractFirstServer_pt2/target/
 /01_Prednasky/P07-02_11/01_ContractFirstClient_pt2/target/
+/02_Cvicenia/C06-28_10/01_Jedalen/target/
+/02_Cvicenia/C06-28_10/01_JedalenKlient/target/
+/02_Cvicenia/C07-04_11/01_Jedalen/target/
+/02_Cvicenia/C07-04_11/01_Jedalen_pt2/target/
+/02_Cvicenia/C07-04_11/01_JedalenKlient/target/
+/02_Cvicenia/C07-04_11/01_JedalenKlient_pt2/target/
+/02_Cvicenia/C07-04_11/02_Async/target/
+/02_Cvicenia/C07-04_11/02_AsyncKlient/target/
+/02_Cvicenia/C06-28_10/02_JedalenKlient/target/
