--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,7 @@ SoapUI-5.4.0/*
 /02_Cvicenia/C07-04_11/02_Async/target/
 /02_Cvicenia/C07-04_11/02_AsyncKlient/target/
 /02_Cvicenia/C06-28_10/02_JedalenKlient/target/
+/02_Cvicenia/C07-04_11/02_JedalenEJB/target/
+/02_Cvicenia/C07-04_11/mavenproject1/target/
+/02_Cvicenia/C07-04_11/JedalenEJB/target/
+/02_Cvicenia/C06-28_10/02_JedalenEJBKlient/target/
