--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,5 @@ SoapUI-5.4.0/*
 /02_Cvicenia/Cv_old/Cv4/Uloha3_PoistovnaCodeFirst/target/
 /02_Cvicenia/Cv_old/Cv4/Uloha3_PoistovnaCodeFirstKlient/target/
 /02_Cvicenia/Cv_old/Cv4/Uloha1_JedalenCodeFirst_Map/target/
+/02_Cvicenia/Cv_old/Uloha1_JedalenCodeFirstKlient/target/
+/02_Cvicenia/Cv_old/Cv4/Uloha1_JedalenCodeFirstKlient/target/
