--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,5 @@ SoapUI-5.4.0/*
 /02_Cvicenia/Cv_old/Cv4/Uloha1_JedalenCodeFirst_Map/target/
 /02_Cvicenia/Cv_old/Uloha1_JedalenCodeFirstKlient/target/
 /02_Cvicenia/Cv_old/Cv4/Uloha1_JedalenCodeFirstKlient/target/
+/02_Cvicenia/Cv_old/Cv5/U1_U3_Poistovna/target/
+/02_Cvicenia/Cv_old/Cv5/U1_U3_PoistovnaKlient/target/
