--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,4 @@ SoapUI-5.4.0/*
 /04_Playground/Z2/Projekt2Klient/target/
 /04_Playground/Z2/Banka/target/
 /04_Playground/Z2/BankaKlient/target/
+/03_Zapocty/Z2/Zapocet2/target/
