--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,10 @@ SoapUI-5.4.0/*
 /04_Playground/Z2/Banka/target/
 /04_Playground/Z2/BankaKlient/target/
 /03_Zapocty/Z2/Zapocet2/target/
+/01_Prednasky/P08-09_11/01_Lambda/target/
+/01_Prednasky/P08-09_11/01_Stream/target/
+/02_Cvicenia/C09-18_11/02_Spark/target/
+/04_Playground/spark/target/
+/02_Cvicenia/C09-18_11/U3-U5/target/
+/02_Cvicenia/C09-18_11/U2-U5/target/
+/02_Cvicenia/C09-18_11/U1_z_min_rokov/target/
