--- a/.gitignore
+++ b/.gitignore
@@ -224,3 +224,11 @@ SoapUI-5.4.0/*
 /02_Cvicenia/C09-18_11/U3-U5/target/
 /02_Cvicenia/C09-18_11/U2-U5/target/
 /02_Cvicenia/C09-18_11/U1_z_min_rokov/target/
+/01_Prednasky/P09-16_11/01_Spark_pokrac/target/
+/01_Prednasky/P08-09_11 + P09-16_11/01_Stream/target/
+/01_Prednasky/P08-09_11 + P09-16_11/02_Spark/target/
+/01_Prednasky/P08-09_11, P9-16_11/01_Stream/target/
+/01_Prednasky/P08-09_11, P9-16_11/02_Spark/target/
+/01_Prednasky/P10-23_11/01_Ucty/target/
+/02_Cvicenia/C10-25_11/01_FriendshipSuggestion/target/
+/02_Cvicenia/C10-25_11/U1-U7/target/
