--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,4 @@ SoapUI-5.4.0/*
 /01_Prednasky/P10-23_11/01_Ucty/target/
 /02_Cvicenia/C10-25_11/01_FriendshipSuggestion/target/
 /02_Cvicenia/C10-25_11/U1-U7/target/
+/01_Prednasky/P11-30_11/01_SparkSQL/target/
